Update OAuth flow

--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "supabase:login": "supabase login",
     "supabase:link": "supabase link",
     "supabase:push": "supabase db push",
-    "deploy:functions": "npm run deploy:oauth-install && npm run deploy:oauth-callback && npm run deploy:oauth-refresh && npm run deploy:example-api",
+    "deploy:functions": "npm run deploy:oauth-install && npm run deploy:oauth-callback && npm run deploy:index && npm run deploy:oauth-refresh && npm run deploy:example-api",
     "deploy:oauth-install": "supabase functions deploy oauth-install",
     "deploy:oauth-callback": "supabase functions deploy oauth-callback",
+    "deploy:index": "supabase functions deploy index",
     "deploy:oauth-refresh": "supabase functions deploy oauth-refresh",
     "deploy:example-api": "supabase functions deploy example-api",
     "logs:oauth-install": "supabase functions logs oauth-install",
     "logs:oauth-callback": "supabase functions logs oauth-callback",
+    "logs:index": "supabase functions logs index",
     "logs:oauth-refresh": "supabase functions logs oauth-refresh",
     "logs:example-api": "supabase functions logs example-api",
     "logs:all": "supabase functions logs",
