Fix index page and clean up code

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -356,6 +356,9 @@ verify_jwt = false
 [functions.oauth-callback]
 verify_jwt = false
 
+[functions.index]
+verify_jwt = false
+
 [functions.oauth-refresh]
 verify_jwt = false
 
